feat: get detail team, update team, create team player, and list of team player
