# routes/teams_routes.go
@@ -10,7 +10,10 @@ func SetupTeamsRoutes(router *gin.RouterGroup, server *server.HttpServer) {
 	{
 		teamGroup.POST("/", server.PostCreateTeam)
 		teamGroup.GET("/", server.GetListTeam)
+		teamGroup.GET("/:teamId", server.GetTeamDetail)
+		teamGroup.PUT("/:teamId", server.UpdateTeam)
 		teamGroup.DELETE("/:teamId", server.SoftDeleteTeam)
 		teamGroup.POST("/:teamId/players", server.CreateTeamPlayer)
+		teamGroup.GET("/:teamId/players", server.GetListTeamPlayer)
 	}
 }
